--- a/app/src/main/res/values/themes-common.xml
+++ b/app/src/main/res/values/themes-common.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 /*
 **
 ** Copyright 2013, The Android Open Source Project
@@ -17,47 +16,67 @@
 ** limitations under the License.
 */
 -->
-
 <resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
     <style name="KeyboardIcons" />
+
     <style name="InputView" />
     <!-- Default theme values -->
     <style name="Keyboard">
         <item name="rowHeight">25%p</item>
-        <item name="horizontalGap">@fraction/config_key_horizontal_gap_holo</item>
         <item name="verticalGap">@fraction/config_key_vertical_gap_holo</item>
-        <item name="touchPositionCorrectionData">@array/touch_position_correction_data_holo</item>
-        <item name="keyboardTopPadding">@fraction/config_keyboard_top_padding_holo</item>
-        <item name="keyboardBottomPadding">@fraction/config_keyboard_bottom_padding_holo</item>
+        <item name="moreKeysTemplate">@xml/kbd_more_keys_keyboard_template</item>
+        <item name="horizontalGap">@fraction/config_key_horizontal_gap_holo</item>
+        <item name="maxMoreKeysColumn">@integer/config_max_more_keys_column</item>
         <item name="keyboardLeftPadding">@fraction/config_keyboard_left_padding</item>
         <item name="keyboardRightPadding">@fraction/config_keyboard_right_padding</item>
-        <item name="moreKeysTemplate">@xml/kbd_more_keys_keyboard_template</item>
-        <item name="maxMoreKeysColumn">@integer/config_max_more_keys_column</item>
+        <item name="keyboardTopPadding">@fraction/config_keyboard_top_padding_holo</item>
+        <item name="keyboardBottomPadding">@fraction/config_keyboard_bottom_padding_holo</item>
+        <item name="touchPositionCorrectionData">@array/touch_position_correction_data_holo</item>
     </style>
+
     <style name="KeyboardView">
         <!-- This keyBackground is needed to run unit tests based on {@link InputTestBase}. -->
         <!-- TODO: Apply default {@link KeyboardTheme} to {@link InputTestBase} and remove this. -->
-        <item name="keyBackground">@drawable/btn_keyboard_key_klp</item>
         <item name="keyTypeface">normal</item>
-        <!-- A negative value to disable key text shadow layer. -->
+        <item name="backgroundDimAlpha">128</item>
         <item name="keyTextShadowRadius">-1.0</item>
+        <!-- A negative value to disable key text shadow layer. -->
+        <item name="keyBackground">@drawable/btn_keyboard_key_klp</item>
         <item name="keyHintLetterPadding">@dimen/config_key_hint_letter_padding</item>
-        <item name="keyPopupHintLetterPadding">@dimen/config_key_popup_hint_letter_padding</item>
-        <item name="keyShiftedLetterHintPadding">@dimen/config_key_shifted_letter_hint_padding</item>
         <item name="keyPreviewTextRatio">@fraction/config_key_preview_text_ratio</item>
         <item name="verticalCorrection">@dimen/config_keyboard_vertical_correction</item>
-        <item name="backgroundDimAlpha">128</item>
+        <item name="keyPopupHintLetterPadding">@dimen/config_key_popup_hint_letter_padding</item>
+        <item name="keyShiftedLetterHintPadding">@dimen/config_key_shifted_letter_hint_padding</item>
         <item name="gestureFloatingPreviewTextSize">@dimen/config_gesture_floating_preview_text_size</item>
-        <item name="gestureFloatingPreviewTextOffset">@dimen/config_gesture_floating_preview_text_offset</item>
-        <item name="gestureFloatingPreviewHorizontalPadding">@dimen/config_gesture_floating_preview_horizontal_padding</item>
-        <item name="gestureFloatingPreviewVerticalPadding">@dimen/config_gesture_floating_preview_vertical_padding</item>
-        <item name="gestureFloatingPreviewRoundRadius">@dimen/config_gesture_floating_preview_round_radius</item>
-        <item name="gestureTrailMinSamplingDistance">@dimen/config_gesture_trail_min_sampling_distance</item>
-        <item name="gestureTrailMaxInterpolationAngularThreshold">@integer/config_gesture_trail_max_interpolation_angular_threshold</item>
-        <item name="gestureTrailMaxInterpolationDistanceThreshold">@dimen/config_gesture_trail_max_interpolation_distance_threshold</item>
-        <item name="gestureTrailMaxInterpolationSegments">@integer/config_gesture_trail_max_interpolation_segments</item>
-        <item name="gestureTrailFadeoutStartDelay">@integer/config_gesture_trail_fadeout_start_delay</item>
-        <item name="gestureTrailFadeoutDuration">@integer/config_gesture_trail_fadeout_duration</item>
+        <item name="gestureFloatingPreviewTextOffset">
+            @dimen/config_gesture_floating_preview_text_offset
+        </item>
+        <item name="gestureFloatingPreviewHorizontalPadding">
+            @dimen/config_gesture_floating_preview_horizontal_padding
+        </item>
+        <item name="gestureFloatingPreviewVerticalPadding">
+            @dimen/config_gesture_floating_preview_vertical_padding
+        </item>
+        <item name="gestureFloatingPreviewRoundRadius">
+            @dimen/config_gesture_floating_preview_round_radius
+        </item>
+        <item name="gestureTrailMinSamplingDistance">
+            @dimen/config_gesture_trail_min_sampling_distance
+        </item>
+        <item name="gestureTrailMaxInterpolationAngularThreshold">
+            @integer/config_gesture_trail_max_interpolation_angular_threshold
+        </item>
+        <item name="gestureTrailMaxInterpolationDistanceThreshold">
+            @dimen/config_gesture_trail_max_interpolation_distance_threshold
+        </item>
+        <item name="gestureTrailMaxInterpolationSegments">
+            @integer/config_gesture_trail_max_interpolation_segments
+        </item>
+        <item name="gestureTrailFadeoutStartDelay">
+            @integer/config_gesture_trail_fadeout_start_delay
+        </item>
+        <item name="gestureTrailFadeoutDuration">@integer/config_gesture_trail_fadeout_duration
+        </item>
         <item name="gestureTrailUpdateInterval">@integer/config_gesture_trail_update_interval</item>
         <item name="gestureTrailStartWidth">@dimen/config_gesture_trail_start_width</item>
         <item name="gestureTrailEndWidth">@dimen/config_gesture_trail_end_width</item>
@@ -65,13 +84,21 @@
         <item name="gestureTrailShadowRatio">@integer/config_gesture_trail_shadow_ratio</item>
         <!-- Common attributes of MainKeyboardView -->
         <item name="keyHysteresisDistance">@dimen/config_key_hysteresis_distance</item>
-        <item name="keyHysteresisDistanceForSlidingModifier">@dimen/config_key_hysteresis_distance_for_sliding_modifier</item>
+        <item name="keyHysteresisDistanceForSlidingModifier">
+            @dimen/config_key_hysteresis_distance_for_sliding_modifier
+        </item>
         <item name="touchNoiseThresholdTime">@integer/config_touch_noise_threshold_time</item>
         <item name="touchNoiseThresholdDistance">@dimen/config_touch_noise_threshold_distance</item>
-        <item name="keySelectionByDraggingFinger">@bool/config_key_selection_by_dragging_finger</item>
-        <item name="slidingKeyInputPreviewWidth">@dimen/config_sliding_key_input_preview_width</item>
-        <item name="slidingKeyInputPreviewBodyRatio">@integer/config_sliding_key_input_preview_body_ratio</item>
-        <item name="slidingKeyInputPreviewShadowRatio">@integer/config_sliding_key_input_preview_shadow_ratio</item>
+        <item name="keySelectionByDraggingFinger">@bool/config_key_selection_by_dragging_finger
+        </item>
+        <item name="slidingKeyInputPreviewWidth">@dimen/config_sliding_key_input_preview_width
+        </item>
+        <item name="slidingKeyInputPreviewBodyRatio">
+            @integer/config_sliding_key_input_preview_body_ratio
+        </item>
+        <item name="slidingKeyInputPreviewShadowRatio">
+            @integer/config_sliding_key_input_preview_shadow_ratio
+        </item>
         <item name="keyRepeatStartTimeout">@integer/config_key_repeat_start_timeout</item>
         <item name="keyRepeatInterval">@integer/config_key_repeat_interval</item>
         <item name="longPressShiftLockTimeout">@integer/config_longpress_shift_lock_timeout</item>
@@ -79,41 +106,74 @@
         <!-- TODO: consolidate key preview linger timeout with the key preview animation parameters. -->
         <item name="keyPreviewLingerTimeout">@integer/config_key_preview_linger_timeout</item>
         <item name="moreKeysKeyboardLayout">@layout/more_keys_keyboard</item>
-        <item name="showMoreKeysKeyboardAtTouchedPoint">@bool/config_show_more_keys_keyboard_at_touched_point</item>
-        <item name="languageOnSpacebarTextRatio">@fraction/config_language_on_spacebar_text_ratio</item>
-        <item name="languageOnSpacebarFinalAlpha">@integer/config_language_on_spacebar_final_alpha</item>
+        <item name="showMoreKeysKeyboardAtTouchedPoint">
+            @bool/config_show_more_keys_keyboard_at_touched_point
+        </item>
+        <item name="languageOnSpacebarTextRatio">@fraction/config_language_on_spacebar_text_ratio
+        </item>
+        <item name="languageOnSpacebarFinalAlpha">@integer/config_language_on_spacebar_final_alpha
+        </item>
         <item name="languageOnSpacebarFadeoutAnimator">@anim/language_on_spacebar_fadeout</item>
         <!-- Remove animations for now because it could drain a non-negligible amount of battery while typing.
         <item name="altCodeKeyWhileTypingFadeoutAnimator">@anim/alt_code_key_while_typing_fadeout</item>
         <item name="altCodeKeyWhileTypingFadeinAnimator">@anim/alt_code_key_while_typing_fadein</item>
         -->
         <!-- Common attributes of MainKeyboardView for gesture typing detection and recognition -->
-        <item name="gestureFloatingPreviewTextLingerTimeout">@integer/config_gesture_floating_preview_text_linger_timeout</item>
-        <item name="gestureStaticTimeThresholdAfterFastTyping">@integer/config_gesture_static_time_threshold_after_fast_typing</item>
-        <item name="gestureDetectFastMoveSpeedThreshold">@fraction/config_gesture_detect_fast_move_speed_threshold</item>
-        <item name="gestureDynamicThresholdDecayDuration">@integer/config_gesture_dynamic_threshold_decay_duration</item>
-        <item name="gestureDynamicTimeThresholdFrom">@integer/config_gesture_dynamic_time_threshold_from</item>
-        <item name="gestureDynamicTimeThresholdTo">@integer/config_gesture_dynamic_time_threshold_to</item>
-        <item name="gestureDynamicDistanceThresholdFrom">@fraction/config_gesture_dynamic_distance_threshold_from</item>
-        <item name="gestureDynamicDistanceThresholdTo">@fraction/config_gesture_dynamic_distance_threshold_to</item>
-        <item name="gestureSamplingMinimumDistance">@fraction/config_gesture_sampling_minimum_distance</item>
-        <item name="gestureRecognitionMinimumTime">@integer/config_gesture_recognition_minimum_time</item>
-        <item name="gestureRecognitionUpdateTime">@integer/config_gesture_recognition_update_time</item>
-        <item name="gestureRecognitionSpeedThreshold">@fraction/config_gesture_recognition_speed_threshold</item>
-        <item name="suppressKeyPreviewAfterBatchInputDuration">@integer/config_suppress_key_preview_after_batch_input_duration</item>
+        <item name="gestureFloatingPreviewTextLingerTimeout">
+            @integer/config_gesture_floating_preview_text_linger_timeout
+        </item>
+        <item name="gestureStaticTimeThresholdAfterFastTyping">
+            @integer/config_gesture_static_time_threshold_after_fast_typing
+        </item>
+        <item name="gestureDetectFastMoveSpeedThreshold">
+            @fraction/config_gesture_detect_fast_move_speed_threshold
+        </item>
+        <item name="gestureDynamicThresholdDecayDuration">
+            @integer/config_gesture_dynamic_threshold_decay_duration
+        </item>
+        <item name="gestureDynamicTimeThresholdFrom">
+            @integer/config_gesture_dynamic_time_threshold_from
+        </item>
+        <item name="gestureDynamicTimeThresholdTo">
+            @integer/config_gesture_dynamic_time_threshold_to
+        </item>
+        <item name="gestureDynamicDistanceThresholdFrom">
+            @fraction/config_gesture_dynamic_distance_threshold_from
+        </item>
+        <item name="gestureDynamicDistanceThresholdTo">
+            @fraction/config_gesture_dynamic_distance_threshold_to
+        </item>
+        <item name="gestureSamplingMinimumDistance">
+            @fraction/config_gesture_sampling_minimum_distance
+        </item>
+        <item name="gestureRecognitionMinimumTime">
+            @integer/config_gesture_recognition_minimum_time
+        </item>
+        <item name="gestureRecognitionUpdateTime">@integer/config_gesture_recognition_update_time
+        </item>
+        <item name="gestureRecognitionSpeedThreshold">
+            @fraction/config_gesture_recognition_speed_threshold
+        </item>
+        <item name="suppressKeyPreviewAfterBatchInputDuration">
+            @integer/config_suppress_key_preview_after_batch_input_duration
+        </item>
     </style>
-    <style
-        name="MainKeyboardView"
-        parent="KeyboardView" />
+
+    <style name="MainKeyboardView" parent="KeyboardView" />
     <!-- Though {@link org.dslul.openboard.inputmethod.keyboard.emoji.EmojiPalettesView} doesn't extend
          {@link org.dslul.openboard.inputmethod.keyboard.KeyboardView}, some views inside it, for instance
          delete button, need themed {@link org.dslul.openboard.inputmethod.keyboard.KeyboardView}
          attributes. -->
     <style name="EmojiPalettesView" />
+
     <style name="ClipboardHistoryView" />
+
     <style name="MoreKeysKeyboard" />
+
     <style name="MoreKeysKeyboardView" />
+
     <style name="SuggestionStripView" />
+
     <style name="SuggestionWord">
         <item name="android:minWidth">@dimen/config_suggestion_min_width</item>
         <item name="android:textSize">@dimen/config_suggestion_text_size</item>
@@ -131,67 +191,66 @@
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">none</item>
     </style>
+
     <style name="ForSplash" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/bg_splash</item>
     </style>
 
     <style name="lessRoundedCorners" parent="">
-        <item name="cornerFamily">rounded</item>
         <item name="cornerSize">10%</item>
+        <item name="cornerFamily">rounded</item>
     </style>
 
     <style name="roundedCorners" parent="">
-        <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
+        <item name="cornerFamily">rounded</item>
     </style>
 
     <style name="AdAttribution">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">left</item>
-        <item name="android:textColor">@color/gray_700</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textSize">@dimen/_8sdp</item>
         <item name="android:text">Ad</item>
-        <item name="android:background">@drawable/grey_border_less_bg</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">left</item>
         <item name="android:width">@dimen/_20sdp</item>
         <item name="android:height">@dimen/_14sdp</item>
-    </style>
-    <style name="adTheme">
+        <item name="android:textSize">@dimen/_8sdp</item>
+        <item name="android:textColor">@color/gray_700</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">left</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textSize">10sp</item>
+        <item name="android:background">@drawable/grey_border_less_bg</item>
+    </style>
+
+    <style name="adTheme">
         <item name="android:text">Ad</item>
-        <item name="android:background">@drawable/bg_ad</item>
-        <item name="android:backgroundTint">@color/gray_700</item>
         <item name="android:width">20dp</item>
         <item name="android:height">14dp</item>
-
+        <item name="android:textSize">10sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">left</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/bg_ad</item>
+        <item name="android:backgroundTint">@color/gray_700</item>
     </style>
 
     <style name="Theme.TranslatorGuru" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#f5f6fb</item>
-        <item name="colorPrimaryVariant">@color/white</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/gray_700</item>
-        <item name="colorSecondaryVariant">@color/gray_700</item>
         <item name="colorOnSecondary">#f5f6fb</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorSecondary">@color/gray_700</item>
+        <item name="colorPrimaryVariant">@color/white</item>
+        <item name="colorSecondaryVariant">@color/gray_700</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
 
         <!-- Customize your theme here. -->
         <item name="buttonTint">@color/accent</item>
-        <item name="colorControlActivated">@color/accent</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
+        <item name="colorControlActivated">@color/accent</item>
 
     </style>
 
@@ -202,11 +261,11 @@
     </style>
 
     <style name="Theme.Transparent" parent="Theme.TranslatorGuru">
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowContentOverlay">@null</item>
         <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
 </resources>
