--- a/app/src/main/res/xml/prefs_screen_preferences.xml
+++ b/app/src/main/res/xml/prefs_screen_preferences.xml
@@ -41,7 +41,7 @@
         <CheckBoxPreference
             android:key="sound_on"
             android:title="@string/sound_on_keypress"
-            android:defaultValue="@bool/config_default_sound_enabled"
+            android:defaultValue="true"
             android:persistent="true" />
 
         <org.dslul.openboard.inputmethod.latin.settings.SeekBarDialogPreference
@@ -88,7 +88,7 @@
         <CheckBoxPreference
             android:key="pref_show_clipboard_key"
             android:title="@string/show_clipboard_key"
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:persistent="true" />
 
     </PreferenceCategory>
