--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:background="?attr/colorPrimaryVariant"
+    android:background="@color/white"
     tools:context="org.dslul.openboard.translator.pro.DashboardActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -60,7 +60,7 @@
                     android:paddingEnd="@dimen/less_padding"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/ic_baseline_access_time_filled_24"
-                    app:tint="?attr/colorSecondary" />
+                    app:tint="@color/gray_700" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -92,7 +92,7 @@
                     android:paddingStart="@dimen/less_padding"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/ic_baseline_settings_24"
-                    app:tint="?attr/colorSecondary" />
+                    app:tint="@color/gray_700" />
 
             </LinearLayout>
 
@@ -416,12 +416,14 @@
                         android:id="@+id/btnMultipleTranslate"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/fab_padding"
+                        android:layout_marginVertical="@dimen/fab_padding"
+                        android:layout_marginStart="@dimen/fab_padding"
+                        android:layout_marginEnd="@dimen/padding"
                         android:background="@drawable/bg_dashboard_gradient_one"
                         android:elevation="@dimen/less_padding"
                         android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/btnKeyboard"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/btnPhrasebook">
 
@@ -476,6 +478,85 @@
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/btnKeyboard"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="@dimen/fab_padding"
+                        android:layout_marginStart="@dimen/padding"
+                        android:layout_marginEnd="@dimen/fab_padding"
+                        android:background="@drawable/bg_dashboard_gradient_one"
+                        android:elevation="@dimen/less_padding"
+                        android:visibility="visible"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/btnMultipleTranslate"
+                        app:layout_constraintTop_toBottomOf="@id/btnPhrasebook">
+
+                        <ImageView
+                            android:id="@+id/imgKeyboard"
+                            android:layout_width="@dimen/_40sdp"
+                            android:layout_height="@dimen/_40sdp"
+                            android:layout_marginStart="@dimen/padding"
+                            android:layout_marginTop="@dimen/padding"
+                            android:padding="@dimen/padding"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/ic_keyboard_tranlsate"
+                            app:layout_constraintBottom_toTopOf="@id/tvKeyoard"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:tint="@color/accent" />
+
+                        <ImageView
+                            android:id="@+id/btnKeyboardSettings"
+                            android:layout_width="@dimen/icon_size"
+                            android:layout_height="@dimen/icon_size"
+                            android:src="@drawable/ic_baseline_settings_24"
+                            android:background="@drawable/bg_nothing_ripple_padding_rounded"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            android:visibility="gone"
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:padding="@dimen/less_padding"
+                            android:layout_margin="@dimen/less_padding"/>
+
+                        <TextView
+                            android:id="@+id/tvKeyoard"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/padding"
+                            android:layout_weight="1"
+                            android:gravity="start"
+                            android:paddingStart="@dimen/padding"
+                            android:text="Keyboard\nTranslator"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="@+id/imgKeyboard"
+                            app:layout_constraintTop_toBottomOf="@id/imgKeyboard" />
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="@dimen/_50sdp"
+                            android:layout_height="@dimen/_50sdp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent">
+
+                            <ImageView
+                                android:layout_width="@dimen/_50sdp"
+                                android:layout_height="@dimen/_50sdp"
+                                android:layout_margin="@dimen/padding"
+                                android:alpha="0.05"
+                                android:rotation="320"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/ic_keyboard_tranlsate"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:tint="@color/accent" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </ScrollView>
@@ -484,13 +565,15 @@
                 android:id="@+id/nativeAdFrameLayout"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/_230sdp"
+                android:visibility="gone"
                 android:layout_margin="@dimen/padding"
                 android:elevation="@dimen/less_padding"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include
