--- a/app/src/main/res/layout/activity_display_favorites.xml
+++ b/app/src/main/res/layout/activity_display_favorites.xml
@@ -36,7 +36,7 @@
                 android:paddingVertical="@dimen/less_padding"
                 android:paddingEnd="@dimen/less_padding"
                 app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-                app:tint="?attr/colorSecondary" />
+                app:tint="@color/gray_700" />
 
             <TextView
                 android:layout_width="0dp"
