--- a/app/src/main/res/layout/activity_display_history.xml
+++ b/app/src/main/res/layout/activity_display_history.xml
@@ -36,7 +36,7 @@
                 android:paddingVertical="@dimen/less_padding"
                 android:paddingEnd="@dimen/less_padding"
                 app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-                app:tint="?attr/colorSecondary"
+                app:tint="@color/gray_700"
                 android:contentDescription="@string/todo" />
 
             <TextView
@@ -57,7 +57,7 @@
                 android:paddingVertical="@dimen/less_padding"
                 android:paddingStart="@dimen/less_padding"
                 app:srcCompat="@drawable/ic_baseline_favorite_24"
-                app:tint="?attr/colorSecondary"
+                app:tint="@color/gray_700"
                 android:contentDescription="@string/todo" />
 
         </LinearLayout>
