--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -45,7 +45,7 @@
                 android:paddingVertical="@dimen/less_padding"
                 android:paddingEnd="@dimen/less_padding"
                 app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-                app:tint="?attr/colorSecondary"
+                app:tint="@color/gray_700"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <TextView
@@ -68,7 +68,7 @@
                 android:paddingHorizontal="10dp"
                 android:paddingVertical="20dp"
                 app:srcCompat="@drawable/ic_baseline_refresh_24"
-                app:tint="?attr/colorSecondary"
+                app:tint="@color/gray_700"
                 tools:ignore="TouchTargetSizeCheck" />
         </LinearLayout>
 
