--- a/app/src/main/res/layout/activity_multi_language_translation.xml
+++ b/app/src/main/res/layout/activity_multi_language_translation.xml
@@ -55,7 +55,7 @@
             android:paddingVertical="@dimen/less_padding"
             android:paddingEnd="@dimen/less_padding"
             app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-            app:tint="?attr/colorSecondary"
+            app:tint="@color/gray_700"
             tools:ignore="RtlSymmetry" />
 
         <TextView
@@ -79,7 +79,7 @@
             android:paddingHorizontal="10dp"
             android:paddingVertical="20dp"
             app:srcCompat="@drawable/ic_baseline_access_time_filled_24"
-            app:tint="?attr/colorSecondary" />
+            app:tint="@color/gray_700" />
     </LinearLayout>
 
     <LinearLayout
