--- a/app/src/main/res/layout/activity_phrases.xml
+++ b/app/src/main/res/layout/activity_phrases.xml
@@ -44,7 +44,7 @@
                 android:paddingVertical="@dimen/less_padding"
                 android:paddingEnd="@dimen/less_padding"
                 app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-                app:tint="?attr/colorSecondary" />
+                app:tint="@color/gray_700" />
 
             <TextView
                 android:id="@+id/tvHeading"
@@ -123,7 +123,7 @@
                 android:padding="@dimen/padding_10"
                 android:paddingVertical="20dp"
                 app:srcCompat="@drawable/ic_switch_lang"
-                app:tint="?attr/colorSecondary" />
+                app:tint="@color/gray_700" />
 
             <LinearLayout
                 android:id="@+id/llLngToPhrase"
