--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -32,7 +32,7 @@
             android:paddingVertical="@dimen/padding"
             android:paddingEnd="@dimen/padding"
             app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-            app:tint="?attr/colorSecondary" />
+            app:tint="@color/gray_700" />
 
         <TextView
             android:layout_width="0dp"
