--- a/app/src/main/res/layout/activity_translate.xml
+++ b/app/src/main/res/layout/activity_translate.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.dslul.openboard.translator.pro.DashboardActivity">
+    tools:context="org.dslul.openboard.translator.pro.TranslateActivity">
 
     <FrameLayout
         android:id="@+id/bannerFrame"
@@ -44,7 +44,7 @@
                 android:paddingVertical="@dimen/less_padding"
                 android:paddingEnd="@dimen/less_padding"
                 app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-                app:tint="?attr/colorSecondary" />
+                app:tint="@color/gray_700" />
 
             <TextView
                 android:id="@+id/tvHeading"
@@ -66,7 +66,7 @@
                 android:paddingHorizontal="10dp"
                 android:paddingVertical="20dp"
                 app:srcCompat="@drawable/ic_baseline_access_time_filled_24"
-                app:tint="?attr/colorSecondary" />
+                app:tint="@color/gray_700" />
         </LinearLayout>
 
         <LinearLayout
@@ -132,7 +132,7 @@
                     android:padding="@dimen/padding_10"
                     android:paddingVertical="20dp"
                     app:srcCompat="@drawable/ic_switch_lang"
-                    app:tint="?attr/colorSecondary" />
+                    app:tint="@color/gray_700" />
 
                 <LinearLayout
                     android:id="@+id/llLngToFrag"
@@ -255,7 +255,7 @@
                                     android:contentDescription="@string/todo"
                                     android:elevation="@dimen/fab_padding"
                                     app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintStart_toEndOf="@id/btnCamera"
+                                    app:layout_constraintStart_toEndOf="@id/btnKeyboard"
                                     app:layout_constraintTop_toTopOf="parent"
                                     app:srcCompat="@drawable/ic_microphone"
                                     app:tint="@color/accent" />
@@ -272,7 +272,7 @@
                                     android:scaleType="centerInside"
                                     android:elevation="@dimen/fab_padding"
                                     app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintStart_toEndOf="@id/btnSpeakInput"
+                                    app:layout_constraintStart_toEndOf="@id/btnCamera"
                                     app:layout_constraintTop_toTopOf="parent"
                                     app:srcCompat="@drawable/ic_keyboard"
                                     app:tint="@color/accent" />
@@ -316,7 +316,7 @@
                                     android:backgroundTint="@color/accent"
                                     android:orientation="horizontal"
                                     android:paddingHorizontal="@dimen/padding_10"
-                                    android:visibility="invisible"
+                                    android:visibility="visible"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintTop_toTopOf="parent">
@@ -345,12 +345,12 @@
                             android:id="@+id/nativeAdFrameLayoutInBetween"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="2dp"
                             android:visibility="visible"
-                            android:background="@drawable/bg_main_less_rounded"
-                            app:layout_constraintTop_toBottomOf="@id/btnTranslation"
+                            android:layout_marginTop="2dp"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent" />
+                            app:layout_constraintStart_toStartOf="parent"
+                            android:background="@drawable/bg_main_less_rounded"
+                            app:layout_constraintTop_toBottomOf="@id/btnTranslation" />
 
                         <LinearLayout
                             android:id="@+id/llTranslatedText"
