--- a/app/src/main/res/layout/admob_native_layout.xml
+++ b/app/src/main/res/layout/admob_native_layout.xml
@@ -20,8 +20,6 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-
-
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/top"
                     android:layout_width="0dp"
@@ -76,13 +74,12 @@
                         android:maxLength="99"
                         android:textSize="12sp"
                         android:ellipsize="end"
-                        android:textColor="?attr/colorSecondary"
+                        android:textColor="@color/gray_700"
                         app:layout_constraintLeft_toRightOf="@id/ad_app_icon"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/ad_headline"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_marginStart="@dimen/_4sdp"/>
-
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
