--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -121,6 +121,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray_900">#212121</color>
     <color name="gray_700">#616161</color>
+    <color name="gray_800">#424242</color>
     <color name="gray_600">#757575</color>
     <color name="gray_400">#BDBDBD</color>
     <color name="color_nothing">#00000000</color>
